--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
     </div>
 
     <div class="actions">
-      <button onclick="eat()">🍖 Eat</button>
-      <button onclick="sleep()">😴 Sleep</button>
-      <button onclick="play()">🎾 Play</button>
+      <button id="eatBtn">🍖 Eat</button>
+      <button id="sleepBtn">😴 Sleep</button>
+      <button id="playBtn">🎾 Play</button><br><br>
       <input type="text" id="trickInput" placeholder="Enter a trick">
-      <button onclick="train()">🐾 Train</button>
+      <button id="trainBtn">🐾 Train</button>
     </div>
 
     <div class="tricks">
       <h3>Known Tricks:</h3>
-      <ul id="trickList"></ul>
+      <ul id="trickList">
+        <li>sit</li>
+        <li>stay</li>
+        <li>fetch</li>
+        <li>roll over</li>
+        <li>shake</li>
+        <li>play dead</li>
+      </ul>
     </div>
   </div>
 
